syntax = "proto2";

package tutorial;

option java_multiple_files = true;
option java_package = "com.example.tutorial.protos";
option java_outer_classname = "AddressBookProtos";

message PersonProtos {
  optional string name = 1;
  optional int32 id = 2;
  optional string email = 3;

  enum PhoneTypeProtos {
    MOBIILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumberProtos {
    optional string number = 1;
    optional PhoneTypeProtos type = 2 [default = HOME];
  }

  repeated PhoneNumberProtos phones = 4;
}

message AddressBook {
  repeated PersonProtos people = 1;
}